--- a/kiosk_admin_app/src/app/components/mainContent/change-station/change-station.component.html
+++ b/kiosk_admin_app/src/app/components/mainContent/change-station/change-station.component.html
@@ -1,1 +1,11 @@
-<p>change-station works!</p>
+<div class="change--station--modal">
+  <img src="assets/kangan-logo.png" alt="">
+  <p *ngIf="selected$ | async as campus">Current Selected Station: {{campus.campusName}}</p>
+  <div class="" >
+    <select class="select" [(ngModel)]="selectedValue">
+      <option value="{{item.campusId}}" *ngFor="let item of campusList$| async;">{{item.campusName}}</option>
+    </select>
+    <br>
+    <button class="save--button" (click)="clickHandler()">Save Selection</button>
+  </div>
+</div>
