--- a/kiosk_admin_app/src/app/components/mainContent/page-not-found/page-not-found.component.html
+++ b/kiosk_admin_app/src/app/components/mainContent/page-not-found/page-not-found.component.html
@@ -1,1 +1,9 @@
-<p>page-not-found works!</p>
+<div class="pnf--wrapper">
+  <h1>404</h1>
+  <hr class="hr">
+  <p>Page Not Found. you have tried to go to a URL that doesn't exist. you have 4:3 stretched our feelings.</p>
+  <hr class="hr">
+
+  <img src="assets/sad-emoji-by-twitter.png" alt="">
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button"><button>Click here to go back to safety</button></a>
+</div>
