--- a/kiosk_admin_app/src/app/components/mainContent/change-station/change-station.component.scss
+++ b/kiosk_admin_app/src/app/components/mainContent/change-station/change-station.component.scss
@@ -8,5 +8,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  .selected
+  {
+    color: #111111;
+    font-size: 1.25rem;
+  }
+  .button--wrapper
+  {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    button {
+      border: 3px solid #11111175;
+      border-radius: 1rem;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+    }
+  }
 }
