--- a/kiosk_admin_app/src/app/app.component.scss
+++ b/kiosk_admin_app/src/app/app.component.scss
@@ -8,14 +8,27 @@
   overflow-y: hidden;
 
 }
-body
-{
-  height: 100vh;
-  width: 100vw;
-  .container
+@media (orientation: Landscape) {
+  body
   {
-    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    .container
+    {
+      overflow: hidden;
 
+    }
+  }
+}
+@media (orientation: Portrait) {
+  body
+  {
+    height: 100vh;
+    width: 100vw;
+    .container
+    {
+
+    }
   }
 }
 
