--- a/kiosk_admin_app/src/app/components/mainContent/change-station/change-station.component.scss
+++ b/kiosk_admin_app/src/app/components/mainContent/change-station/change-station.component.scss
@@ -1,42 +1,209 @@
-.change--station--modal
-{
-  overflow-x: hidden;
-  width: 35vw;
-  padding:3rem 4rem;
-  background-color: #dddddd75;
-  display: flex;
-  border: 2px solid #11111175;
-  border-radius: 1.5rem;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .select
-  {
-    font-size: 1.15rem;
-    padding: 3px 6px;
-    border-radius: 0.5rem;
-  }
-  .selected
-  {
-    color: #111111;
-    font-size: 1.15rem;
-  }
-  .button--wrapper
-  {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    button {
-      border: 3px solid #11111175;
-      border-radius: 1rem;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
 
+@media (orientation: Landscape) {
+  .change--station--modal
+  {
+    overflow-x: hidden;
+    width: 35vw;
+    padding:3rem 4rem;
+    background-color: #dddddd75;
+    display: flex;
+    border: 2px solid #11111175;
+    border-radius: 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .select
+    {
+      font-size: 1.15rem;
+      padding: 3px 6px;
+      border-radius: 0.5rem;
+    }
+    .selected
+    {
+      color: #111111;
+      font-size: 1.15rem;
+    }
+    .button--wrapper
+    {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      button {
+        border: 3px solid #11111175;
+        border-radius: 1rem;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+
+      }
+    }
+    .loadingBox
+    {
+      position: absolute;
     }
   }
-  .loadingBox
+}
+@media (orientation: Portrait)
+{
+  .change--station--modal
   {
-    position: absolute;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    background-color: #dddddd75;
+    display: flex;
+    border: 2px solid #11111175;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 75%;
+      padding-bottom: 2rem;
+    }
+    .select
+    {
+      font-size: 1.15rem;
+      padding: 3px 6px;
+      border-radius: 0.5rem;
+    }
+    .selected
+    {padding-bottom: 1rem;
+      color: #111111;
+      font-size: 1.15rem;
+      text-align: center;
+    }
+    .button--wrapper
+    {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      button {
+        border: 3px solid #11111175;
+        border-radius: 1rem;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+
+      }
+    }
+    .loadingBox
+    {
+      position: absolute;
+    }
   }
+  .successBox
+  {
+    position: relative;
+  }
+}
+@media (orientation: Portrait) and (max-width:1920px) and (max-height:1600px)
+{
+  .change--station--modal
+  {
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    background-color: #dddddd75;
+    display: flex;
+    border: 2px solid #11111175;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 75%;
+      padding-bottom: 2rem;
+    }
+    .select
+    {
+      font-size: 1.15rem;
+      padding: 3px 6px;
+      border-radius: 0.5rem;
+    }
+    .selected
+    {padding-bottom: 1rem;
+      color: #111111;
+      font-size: 1.15rem;
+      text-align: center;
+    }
+    .button--wrapper
+    {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      button {
+        border: 3px solid #11111175;
+        border-radius: 1rem;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+
+      }
+    }
+    .loadingBox
+    {
+      position: absolute;
+    }
+
+  }
+  .successBox
+  {
+    position: relative;
+  }
+}
+@media (orientation: Landscape) and (any-pointer:coarse) and (max-width:600px) and (max-height:500px)
+{
+
+  .change--station--modal
+  {
+    overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+    padding: 0;
+    background-color: #dddddd75;
+    display: flex;
+    border: 2px solid #11111175;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 75%;
+      padding-bottom: 2rem;
+    }
+    .select
+    {
+      font-size: 1.15rem;
+      padding: 3px 6px;
+      border-radius: 0.5rem;
+    }
+    .selected
+    {padding-bottom: 1rem;
+      color: #111111;
+      font-size: 1.15rem;
+      text-align: center;
+    }
+    .button--wrapper
+    {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      button {
+        border: 3px solid #11111175;
+        border-radius: 1rem;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+
+      }
+    }
+    .loadingBox
+    {
+      position: absolute;
+    }
+  }
+}
+.successBox
+{
+  position: absolute;
 }
