--- a/kiosk_admin_app/src/app/components/mainContent/login/login.component.scss
+++ b/kiosk_admin_app/src/app/components/mainContent/login/login.component.scss
@@ -1,36 +1,172 @@
-.login--modal
-{
-  width: 35vw;
-  padding:3rem 4rem;
-  background-color: #dddddd75;
-  display: flex;
-  border: 2px solid #11111175;
-  border-radius: 1.5rem;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  input {
-    text-align: center;
-    margin: 0.5rem 0;
-    padding: 0.5rem 1rem;
-    border: 2px solid #11111175;
-    border-radius: 0.5rem;
-    color: #111;
-    ::placeholder {
-      color:#bbb;
-    }
-
-  }
-  .login--btn
+@media (orientation: landscape) and (any-pointer:fine) {
+  .login--modal
   {
-    margin-top: 0.75rem;
-    padding: 1rem 4.75rem;
-    border-radius: 1rem;
-    cursor: pointer;
+    width: 35vw;
+    padding:3rem 4rem;
+    background-color: #dddddd75;
+    display: flex;
+    border: 2px solid #11111175;
+    border-radius: 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    input {
+      text-align: center;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      border: 2px solid #11111175;
+      border-radius: 0.5rem;
+      color: #111;
+      ::placeholder {
+        color:#bbb;
+      }
+
+    }
+    .login--btn
+    {
+      margin-top: 0.75rem;
+      padding: 1rem 4.75rem;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+  }
+  .loadingBox
+  {
+    position: absolute;
   }
 }
-.loadingBox
+
+@media (orientation: Portrait)
 {
-  position: absolute;
+
+  .login--modal
+  {
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-color: #dddddd75;
+    display: flex;
+    border-radius: 0;
+    border: 2px solid #11111175;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    input {
+      text-align: center;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      border: 2px solid #11111175;
+      border-radius: 0.5rem;
+      color: #111;
+      ::placeholder {
+        color:#bbb;
+      }
+
+    }
+    .login--btn
+    {
+      margin-top: 0.75rem;
+      padding: 1rem 4.75rem;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+    }
+    .loadingBox
+    {
+      position: absolute;
+    }
+}
+
+@media (orientation: Portrait) and (max-width:1920px) and (max-height:1600px)
+{
+  .login--modal
+  {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-color: #dddddd75;
+    display: flex;
+    border-radius: 0;
+    border: 2px solid #11111175;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 75%;
+      padding-bottom: 2rem;
+    }
+    input {
+      text-align: center;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      border: 2px solid #11111175;
+      border-radius: 0.5rem;
+      color: #111;
+      ::placeholder {
+        color:#bbb;
+      }
+
+    }
+    .login--btn
+    {
+      margin-top: 0.75rem;
+      padding: 1rem 4.75rem;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+    .loadingBox
+    {
+      position: absolute;
+    }
+}
+}
+@media (orientation: Landscape) and (any-pointer:coarse) and (max-width:1280px) and (max-height:1280px)
+{
+  .login--modal
+  {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-color: #dddddd75;
+    display: flex;
+    border-radius: 0;
+    border: 2px solid #11111175;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 50%;
+      padding: 1rem 0;
+    }
+    input {
+      text-align: center;
+      margin: 0.25rem 0;
+      padding: 0.5rem 1rem;
+      border: 2px solid #11111175;
+      border-radius: 0.5rem;
+      color: #111;
+      ::placeholder {
+        color:#bbb;
+      }
+
+    }
+    .login--btn
+    {
+      margin-bottom: 1rem;
+      padding: 0.5rem 4.75rem;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+    .loadingBox
+    {
+      position: absolute;
+    }
+}
 }
