--- a/kiosk_admin_app/src/app/components/mainContent/placeholder/placeholder.component.scss
+++ b/kiosk_admin_app/src/app/components/mainContent/placeholder/placeholder.component.scss
@@ -32,3 +32,21 @@
       z-index: 99;
     }
 }
+// @media (orientation: Landscape), (pointer: none), (pointer:coarse) {
+//   .background--image--wrapper {
+//     height:100vh;
+//     width: 100vw;
+
+//   }
+//   .image
+//   {
+//     height: 100vh;
+//     width:100vw;
+//     z-index: -1;
+//   }
+//   .router-outlet
+//   {
+//     height:100vh;
+//     width: 100vw;
+//   }
+// }
